--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,45 @@
-# Database Configuration
-DATABASE_URL=postgresql+asyncpg://user:password@localhost/property_listing_db
-DATABASE_URL_SYNC=postgresql://user:password@localhost/property_listing_db
-
-# JWT Configuration
-JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
-JWT_ALGORITHM=HS256
-JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
-JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
-
 # Application Configuration
 APP_NAME=Property Listing API
 APP_VERSION=1.0.0
+ENVIRONMENT=development
 DEBUG=false
+TESTING=false
 
-# File Upload Configuration
-UPLOAD_DIRECTORY=uploads
+# Database Configuration (Docker)
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/property_listings
+POSTGRES_DB=property_listings
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+# Test Database Configuration
+TEST_POSTGRES_DB=property_listings_test
+TEST_POSTGRES_USER=postgres
+TEST_POSTGRES_PASSWORD=postgres
+TEST_POSTGRES_HOST=test_db
+TEST_POSTGRES_PORT=5432
+
+# JWT Configuration
+JWT_SECRET_KEY=your-secret-key-change-in-production-must-be-at-least-32-characters-long
+JWT_ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# File Upload Configuration (Docker volumes)
+UPLOAD_DIR=/app/uploads
+TEST_UPLOAD_DIR=/app/test_uploads
 MAX_FILE_SIZE=10485760
-ALLOWED_IMAGE_TYPES=["image/jpeg", "image/png", "image/webp"]
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
 
 # API Configuration
 API_V1_PREFIX=/api/v1
-CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080"]
+CORS_ORIGINS=http://localhost:3000,http://localhost:8080,http://localhost:8000
 
 # Pagination Configuration
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
+
+# Server Configuration
+HOST=0.0.0.0
+PORT=8000
