--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ python-jose[cryptography]==3.3.0
 
 # Configuration and environment
 pydantic[email]==2.5.0
+pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
 # File handling
