--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ sqlalchemy==2.0.23
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
 alembic==1.12.1
+greenlet==3.2.4
 
 # Authentication and security
 pyjwt==2.8.0
