performance optimization and monitoring, deployment config and documentation

--- a/pytest.ini
+++ b/pytest.ini
@@ -18,6 +18,14 @@ markers =
     unit: marks tests as unit tests
     integration: marks tests as integration tests
     slow: marks tests as slow running
+    auth: marks tests as authentication tests
+    crud: marks tests as CRUD operation tests
+    search: marks tests as search and filtering tests
+    upload: marks tests as file upload and image management tests
+    performance: marks tests as performance and load tests
+    docker: marks tests as Docker environment specific tests
+    scenario: marks tests as complex scenario tests
+    edge_case: marks tests as edge case and error handling tests
 asyncio_mode = auto
 filterwarnings =
     ignore::DeprecationWarning
